[package]
name = "eliza-discord"
version = "0.1.0"
authors = ["DefunctLizard <grantshandy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eliza = "2.0.0"
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
